🐛 resolve <code /> text legibility

--- a/src/styles/components/_codeSnippet.scss
+++ b/src/styles/components/_codeSnippet.scss
@@ -38,7 +38,6 @@
   }
 
   span {
-    font-size: inherit;
     line-height: 1.2em;
     @include desktop-view {
       line-height: 1.6em;
